tests/rosetta/out/C/catalan-numbers-1.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int binom(int n, int k) {
  if (k < 0 || k > n) {
    return 0;
  }
  int kk = k;
  if (kk > n - kk) {
    kk = n - kk;
  }
  int res = 1;
  int i = 0;
  while (i < kk) {
    res = (res * (n - i));
    i = i + 1;
    res = (int)((((double)res) / ((double)i)));
  }
  return res;
}

int catalan(int n) {
  return (int)((((double)binom(2 * n, n)) / ((double)(n + 1))));
}

int main() {
  for (int i = 0; i < 15; i++) {
    char *tmp1 = _str(catalan(i));
    printf("%s\n", tmp1);
  }
}

int main() {
  main();
  return 0;
}
